Add module jdk.management.agent
During CDS generation, using -javaagent it will
include the java.instrument module in the default set.
However, during runtime, it will include both
java.instrument and jdk.management.agent modules,
which fails the CDS verification that requires
the same set of modules to be included.